--- a/Flash Chat iOS13/Views/MessageCell.xib
+++ b/Flash Chat iOS13/Views/MessageCell.xib
@@ -21,11 +21,18 @@
                     <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="1lB-Hb-PQ1">
                         <rect key="frame" x="10" y="10" width="355" height="52"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="YouAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="9lR-he-dJp">
+                                <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="5AP-Cu-Wa9"/>
+                                    <constraint firstAttribute="height" constant="40" id="72l-wg-nOJ"/>
+                                </constraints>
+                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gp1-pT-m2L">
-                                <rect key="frame" x="0.0" y="0.0" width="295" height="50"/>
+                                <rect key="frame" x="60" y="0.0" width="235" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zPq-sc-Z5M">
-                                        <rect key="frame" x="10" y="10" width="275" height="30"/>
+                                        <rect key="frame" x="10" y="10" width="215" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" name="BrandLightPurple"/>
                                         <nil key="highlightedColor"/>
@@ -39,11 +46,11 @@
                                     <constraint firstAttribute="trailing" secondItem="zPq-sc-Z5M" secondAttribute="trailing" constant="10" id="bRY-tF-CS1"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MeAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="9lR-he-dJp">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MeAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="lve-gE-o5l">
                                 <rect key="frame" x="315" y="0.0" width="40" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="5AP-Cu-Wa9"/>
-                                    <constraint firstAttribute="height" constant="40" id="72l-wg-nOJ"/>
+                                    <constraint firstAttribute="width" constant="40" id="7GB-u2-HgB"/>
+                                    <constraint firstAttribute="height" constant="40" id="KDe-7W-Fr0"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -59,14 +66,16 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="label" destination="zPq-sc-Z5M" id="Ao7-dw-lv7"/>
+                <outlet property="leftImageView" destination="9lR-he-dJp" id="DdT-er-OnC"/>
                 <outlet property="messageBubble" destination="Gp1-pT-m2L" id="brv-6l-NlB"/>
-                <outlet property="rightImageView" destination="9lR-he-dJp" id="DdT-er-OnC"/>
+                <outlet property="rightImageView" destination="lve-gE-o5l" id="XcW-FI-GFd"/>
             </connections>
             <point key="canvasLocation" x="74.637681159420296" y="117.1875"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="MeAvatar" width="36" height="36"/>
+        <image name="YouAvatar" width="36" height="36"/>
         <namedColor name="BrandLightPurple">
             <color red="0.98000001907348633" green="0.9649999737739563" blue="0.99599999189376831" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
